seccioin previa al main

--- a/index.html
+++ b/index.html
@@ -34,3 +34,41 @@
             </div>
         </nav>
     </header>
+    <aside class="fixed right-4 top-1/2 -translate-y-1/2 z-40 flex flex-col items-center space-y-4 hidden lg:flex">
+        <div class="w-16 h-16 rounded-full overflow-hidden relative shadow-md">
+            <img src="https://i.pravatar.cc/32?img=1" alt="Avatar 1" class="absolute top-0 left-0 w-1/2 h-1/2 object-cover">
+            <img src="https://i.pravatar.cc/32?img=2" alt="Avatar 2" class="absolute top-0 right-0 w-1/2 h-1/2 object-cover">
+            <img src="https://i.pravatar.cc/32?img=3" alt="Avatar 3" class="absolute bottom-0 left-0 w-1/2 h-1/2 object-cover">
+            <div class="absolute bottom-0 right-0 w-8 h-8 bg-blue-600 rounded-full flex items-center justify-center text-white text-xl">
+                <i class="bi bi-plus"></i>
+            </div>
+        </div>
+        <span class="text-sm text-gray-700">Seguir</span>
+
+        <div class="flex flex-col items-center">
+            <div class="w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center shadow-md hover:bg-gray-200 transition-colors">
+                <i class="bi bi-gear text-2xl text-gray-700"></i>
+            </div>
+            <span class="text-sm text-gray-700 mt-1">Herramientas</span>
+        </div>
+
+        <div class="flex flex-col items-center">
+            <div class="w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center shadow-md hover:bg-gray-200 transition-colors">
+                <i class="bi bi-folder text-2xl text-gray-700"></i>
+            </div>
+            <span class="text-sm text-gray-700 mt-1">Guardar</span>
+        </div>
+
+        <div class="flex flex-col items-center">
+            <div class="w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center shadow-md hover:bg-gray-200 transition-colors">
+                <i class="bi bi-upload text-2xl text-gray-700"></i>
+            </div>
+            <span class="text-sm text-gray-700 mt-1">Compartir</span>
+        </div>
+
+        <div class="flex flex-col items-center mt-4">
+            <div class="w-16 h-16 bg-blue-600 rounded-full flex items-center justify-center shadow-lg hover:bg-blue-700 transition-colors cursor-pointer">
+                <i class="bi bi-hand-thumbs-up-fill text-white text-3xl"></i>
+            </div>
+            <span class="text-sm text-gray-700 mt-1">16</span> </div>
+    </aside>
