--- a/index.html
+++ b/index.html
@@ -350,3 +350,78 @@
         </section>
 
     </main>
+    <footer class="bg-gray-900 text-gray-300 py-12">
+        <div class="container mx-auto px-4">
+            <div class="grid grid-cols-1 md:grid-cols-6 gap-8 pb-8">
+                <div class="col-span-1 md:col-span-2">
+                    <h3 class="text-white text-3xl md:text-4xl font-bold mb-6">Behance</h3>
+                </div>
+
+                <div class="col-span-1">
+                    <h3 class="font-semibold text-white uppercase text-base mb-4">Creado para creativos</h3>
+                    <ul class="space-y-3">
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Probar Behance Pro</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Encontrar la inspiración</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Conseguir que te contraten</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Vender recursos creativos</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Vender servicios autónomos</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-span-1">
+                    <h3 class="font-semibold text-white uppercase text-base mb-4">Encontrar talento</h3>
+                    <ul class="space-y-3">
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Publicar una oferta de empleo</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Diseñadores/as gráficos</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Fotógrafos/as</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Editores/as de vídeo</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Diseñadores/as web</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Ilustradores/es</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-span-1">
+                    <h3 class="font-semibold text-white uppercase text-base mb-4">Behance</h3>
+                    <ul class="space-y-3">
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Acerca de Behance</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Adobe Portfolio</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Descargar la aplicación</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Blog</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Trabajo en Behance</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Centro de ayuda</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-white transition-colors text-sm">Contacto</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-span-1">
+                    <h3 class="font-semibold text-white uppercase text-base mb-4">Social</h3>
+                    <ul class="space-y-3">
+                        <li><a href="#" class="flex items-center text-gray-300 hover:text-white transition-colors text-sm"><i class="bi bi-instagram mr-2"></i> Instagram</a></li>
+                        <li><a href="#" class="flex items-center text-gray-300 hover:text-white transition-colors text-sm"><i class="bi bi-twitter mr-2"></i> Twitter</a></li>
+                        <li><a href="#" class="flex items-center text-gray-300 hover:text-white transition-colors text-sm"><i class="bi bi-pinterest mr-2"></i> Pinterest</a></li>
+                        <li><a href="#" class="flex items-center text-gray-300 hover:text-white transition-colors text-sm"><i class="bi bi-facebook mr-2"></i> Facebook</a></li>
+                        <li><a href="#" class="flex items-center text-gray-300 hover:text-white transition-colors text-sm"><i class="bi bi-linkedin mr-2"></i> LinkedIn</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="border-t border-gray-700 pt-8 mt-8 flex flex-col md:flex-row items-center justify-between text-gray-500 text-sm">
+                <div class="flex items-center mb-4 md:mb-0">
+                    <img src="img/i l adobe.jpg" alt="Adobe Logo" class="w-24 h-6 object-contain mr-2">
+                    <p>&copy; 2025 Adobe Inc. All rights reserved.</p>
+                </div>
+                <div class="flex flex-wrap justify-center md:justify-end gap-x-4 gap-y-2">
+                    <a href="#" class="hover:text-white transition-colors">Español</a>
+                    <a href="#" class="hover:text-white transition-colors">Condiciones de uso</a>
+                    <a href="#" class="hover:text-white transition-colors">Privacidad</a>
+                    <a href="#" class="hover:text-white transition-colors">Comunidad</a>
+                    <a href="#" class="hover:text-white transition-colors">Preferencias de cookies</a>
+                    <a href="#" class="hover:text-white transition-colors">No vender ni compartir mi información personal</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+</body>
+</html>
+
